# igcc_data_trasform

./: .gitignore  pyproject.toml
src/: C3S_IAMC_converter.py  C3S_IAMC_converter_folder.py  C3S_netcdf_converter.py  metadata_general.yaml  metadata_specific.yaml  metadata_specific_old.yaml
src/.ipynb_checkpoints/: C3S_IAMC_converter_folder-checkpoint.py  metadata_general-checkpoint.yaml  metadata_specific-checkpoint.yaml
